src/objects/Int_Agreement_Provision__c.object
<CustomObject>
    <description>Int Agreement Provision</description>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement Name</description>
        <label>Agreement Name</label>
        <referenceTo>Int_Agreement__c</referenceTo>
        <relationshipLabel>Int Agreements Provision</relationshipLabel>
        <relationshipName>Int_Agreements_Provision</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Agreement Number</description>
        <label>Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Source_System__c</fullName>
        <description>Agreement Source System</description>
        <label>Agreement Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Provision_Amount__c</fullName>
        <description>Credit Risk Provision Amount</description>
        <label>Credit Risk Provision Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Provision_Type__c</fullName>
        <description>Credit Risk Provision Type</description>
        <label>Credit Risk Provision Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency Code</description>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provision_Determination_Date__c</fullName>
        <description>Provision Determination Date</description>
        <label>Provision Determination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provision_Origination_Type_Code__c</fullName>
        <description>Provision Origination Type Code</description>
        <label>Provision Origination Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Int Agreement Provision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AGP-{0000000000}</displayFormat>
        <label>Agreement Provision Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Provision</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>